# PaathShala

./: README.md  TODO.md  index.html  students.db
backend/: auth.py  crud.py  database.py  main.py  main2.py  models.py  pyproject.toml  schemas.py
backend/otpVerification/: otp.py
backend/otpVerification/.cph/: .otp.py_601b092759009f77cc7afed203575bd3.prob
pages/: index.html
src/i18n/: en.json  hi.json
src/js/: login.js  main.js
src/landPage/: index.html  login.js  main.js  style.css
src/pages/: game.txt  game1.html  index.html  profile.html  quiz10English.html  quiz10EnglishResult.html  student.html  teacher.html  teacherProfile.html
src/static/Games_Info/: game1.css  game1.js
src/static/landPage/: login.js  main.js  style.css
src/static/quiz/: quiz10English.css  quiz10English.js  quiz10EnglishResult.css  quiz10EnglishResult.js
src/static/studentLandPage/: student.css  student.js
src/static/studentProfilePage/: profile.css  profile.js
src/static/teacherLandPage/: teacher.css  teacher.js
src/static/teacherProfilePage/: profile.js
src/student/: index.html  student.css  student.js
src/student/studentProfilePage/: profile.html
src/styles/: style.css
