[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<=4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
